--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<h1 class="font-bold text-center mb-2">{{ "angular app" | titlecase}}</h1>
+<div class="max-w-2xl container mx-auto pt-5">
+
+  <app-product
+    [product]="products[0]"
+  ></app-product>
+
+</div>
+
+
