--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
 <app-global-error></app-global-error>
 
-<div class="max-w-2xl container mx-auto pt-5">
+<app-navigation></app-navigation>
 
-  <app-product
-    *ngFor="let product of products; let i = index"
-    [product]="product"
-  ></app-product>
+<div class="max-w-2xl container mx-auto pt-5 mt-[50px]">
+
+  <router-outlet></router-outlet>
 
 </div>
 
