--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -2,6 +2,6 @@
   <h1 class="font-bold">Angular App</h1>
   <span>
     <a routerLink="/" class="mr-2">Products</a>
-    <a routerLink="/about">About</a>
+    <a routerLink="/profile">Profile</a>
   </span>
 </nav>
