--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -11,7 +11,7 @@
     }"
     (click)="details = !details"
   >
-    {{ details ? 'Hide' : 'Show' }} Details
+    {{ details ? 'Hide' : 'Show' }} Description
   </button>
 
   <div *ngIf="details">
