--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -1,5 +1,5 @@
 <app-user
-  [user] = user
+  [user] = currentUser
 ></app-user>
 
 <app-modal *ngIf="modalService.isVisible$ | async" title="Changing user data">
