--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -5,10 +5,10 @@
     <p>Password: *****</p>
   </span>
 
-  <button
-  class="border py-2 px-4 rounded bg-yellow-400"
-  (click)="modalService.open()"
-  >
-    Change
-  </button>
+<!--  <button-->
+<!--  class="border py-2 px-4 rounded bg-yellow-400"-->
+<!--  (click)="modalService.open()"-->
+<!--  >-->
+<!--    Change-->
+<!--  </button>-->
 </div>
