--- a/src/app/components/random-products/random-products.component.html
+++ b/src/app/components/random-products/random-products.component.html
@@ -1,10 +1,10 @@
-<div class="py-4 px-6 border rounded flex items-center flex-col w-fit h-fit mb-2 mx-auto">
-  <img [src]="product.image" [alt]="product.name" class="w-[400px] h-min mb-2">
+<div class="py-4 px-6 border rounded flex items-center flex-col justify-center w-fit h-[400px] mb-2 mx-2">
+  <img [src]="product.image" [alt]="product.name" class="w-[300px] h-fit mb-2 w-fit">
   <h2 class="mb-2 text-md text-center">{{ product.name }}</h2>
   <p>Price: <span class="font-bold">{{ product.price | currency:'USD ' }}</span></p>
 
   <button
-    class="border py-2 px-4 mt-4 rounded bg-yellow-400"
+    class="border py-2 px-4 mt-4 w-fit h-min rounded bg-yellow-400"
 
     [routerLink]="['/aboutProduct', product.id]"
   >
@@ -30,3 +30,4 @@
     </button>
   </div>
 </div>
+
