--- a/src/app/components/random-products/random-products.component.html
+++ b/src/app/components/random-products/random-products.component.html
@@ -1,5 +1,5 @@
 <div class="py-4 px-6 border rounded flex items-center flex-col justify-center w-fit h-[400px] mb-2 mx-2">
-  <img [src]="product.image" [alt]="product.name" class="w-[300px] h-fit mb-2 w-fit">
+  <img [src]="product.image" [alt]="product.name" class="h-[200px] mb-2">
   <h2 class="mb-2 text-md text-center">{{ product.name }}</h2>
   <p>Price: <span class="font-bold">{{ product.price | currency:'USD ' }}</span></p>
 
